CORS and postRequest